--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
       <meta http-equiv="refresh" content="0;url=https://george-apazidis.github.io/san-diego-quiz/index.html" />
    </head>
    <body>
-    <p>this page was moved to <a>https://george-apazidis.github.io/san-diego-quiz/index.html</a></p>
+    <p>this page was moved to <a href="https://george-apazidis.github.io/san-diego-quiz/index.html">https://george-apazidis.github.io/san-diego-quiz/index.html</a></p>
   </body>
 </html>
